/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package com.cda.model;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import javax.persistence.Entity;
import javax.persistence.Id;
import java.util.*;


// ----------- << imports@AAAAAAF/IZW3Q9qfJyg= >>
// ----------- >>

@Entity
@Getter
@Setter
@NoArgsConstructor

public class Centre {
    @Id
    private int id_centre;
    private String nomCentre;
    private String adresseCentre;
    private String codesPostal;

    private String ville;

    /*
    private Set<Formation>  = new HashSet<>();

    public void link(Formation _) {
        if (_ != null) {
            _.unlink();
            _.set(this);
            get().add(_);
        }
    }

    public void unlink(Formation _) {
        if (_ != null) {
            _.set(null);
            get().remove(_);
        }
    }

    public void unlink(Formation _, Iterator<Formation> it) {
        if (_ != null) {
            _.set(null);
            it.remove();
        }
    }
*/

}