/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package com.cda.model;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import javax.persistence.Entity;
import javax.persistence.Id;
import java.util.*;


// ----------- << imports@AAAAAAF/IZj6Ltv7E6s= >>
// ----------- >>

@Entity
@Getter
@Setter
@NoArgsConstructor

public class Formateur {
@Id
    private int id_formateur;
    private String nom;
    private String prenom;
    private String email;
    private String tel;
    /*
    private Set<Seance>  = new HashSet<>();

    public void link(Seance _) {
        if (_ != null) {
            _.unlink();
            _.set(this);
            get().add(_);
        }
    }

    public void unlink(Seance _) {
        if (_ != null) {
            _.set(null);
            get().remove(_);
        }
    }

    public void unlink(Seance _, Iterator<Seance> it) {
        if (_ != null) {
            _.set(null);
            it.remove();
        }
    }
*/

}