/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package com.cda.model;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import javax.persistence.Entity;
import javax.persistence.Id;
import java.util.*;


// ----------- << imports@AAAAAAF/IZXZqNsaQmw= >>
// ----------- >>

@Entity
@Getter
@Setter
@NoArgsConstructor

public class Formation {
@Id
    private int id_formation;

    private String typeFormation;

    //private Centre centre;
/*
    private Set<Session>  = new HashSet<>();
    private Set<Activiter>  = new HashSet<>();

    public void link(Centre _) {
        if (_ != null) {
            _.get().add(this);
        }

        unlink();
        set(_);
    }

    public void link(Session _) {
        if (_ != null) {
            _.unlink();
            _.set(this);
            get().add(_);
        }
    }

    public void link(Activiter _) {
        if (_ != null) {
    		_.get().add(this);
            get().add(_);
        }
    }

    public void unlink() {
        if (get() != null) {
            get().get().remove(this);
            set(null);
        }
    }

    public void unlink(Session _) {
        if (_ != null) {
            _.set(null);
            get().remove(_);
        }
    }

    public void unlink(Session _, Iterator<Session> it) {
        if (_ != null) {
            _.set(null);
            it.remove();
        }
    }

    public void unlink(Activiter _) {
        if (_ != null) {
            _.get().remove(this);
            get().remove(_);
        }
    };

    public void unlink(Activiter _, Iterator<Activiter> it) {
        if (_ != null) {
            _.get().remove(this);
            it.remove();
        }
    }
*/

}