/*
* This code has been generated by the Rebel: a code generator for modern Java.
*
* Drop us a line or two at feedback@archetypesoftware.com: we would love to hear from you!
*/
package com.cda.model;

import lombok.Getter;
import lombok.NoArgsConstructor;
import lombok.Setter;

import javax.persistence.Entity;
import javax.persistence.Id;
import java.util.*;


// ----------- << imports@AAAAAAF/IZXTBdrxFoA= >>
// ----------- >>

@Entity
@Getter
@Setter
@NoArgsConstructor

public class Seance {
@Id
    private int id_seance;
    private Date dateDuJour;
    private int durer;
    private String supportUse;
    private String deroulement;
    private String objectifPeda;
    /*
    private Formateur formateur;
    private Session session;
    private Competance competance;*/
/*
    public void link(Formateur _) {
        if (_ != null) {
            _.get().add(this);
        }

        unlink();
        set(_);
    }

    public void link(Session _) {
        if (_ != null) {
            _.get().add(this);
        }

        unlink();
        set(_);
    }

    public void link(Competance _) {
        if (_ != null) {
            _.get().add(this);
        }

        unlink();
        set(_);
    }

    public void unlink() {
        if (get() != null) {
            get().get().remove(this);
            set(null);
        }
    }

    public void unlink() {
        if (get() != null) {
            get().get().remove(this);
            set(null);
        }
    }

    public void unlink() {
        if (get() != null) {
            get().get().remove(this);
            set(null);
        }
    }
*/

}